# poly-comp

./: .gitignore  Makefile  README.md
apps/api/: .env.bak  .env.ex  Cargo.toml  check_error.txt  check_fail_2.txt  check_output.txt  check_test_fail.txt  compile_errors.txt  test_fail.txt
apps/api/migrations/: 02_create_cards_schema.sql
apps/api/src/: config.rs  main.rs  state.rs
apps/api/src/application/: auction_service.rs  card_service.rs  dice_service.rs  game_service.rs  mod.rs  property_service.rs  roulette_service.rs  special_dice_service.rs  trade_service.rs  transaction_service.rs  user_service.rs
apps/api/src/domain/: entities.rs  events.rs  repositories.rs
apps/api/src/infrastructure/: board_config.rs  mod.rs
apps/api/src/infrastructure/postgres/: auction_repository.rs  card_repository.rs  dice_repository.rs  game_repository.rs  mod.rs  participant_repository.rs  property_repository.rs  roulette_repository.rs  special_dice_repository.rs  trade_repository.rs  transaction_repository.rs  user_repository.rs
apps/api/src/shared/: auth.rs
apps/api/src/web/: extractors.rs  mod.rs
apps/api/src/web/handlers/: auction.rs  card.rs  dice.rs  game.rs  mod.rs  property.rs  roulette.rs  special_dice.rs  trade.rs  transaction.rs  user.rs  ws.rs
apps/web/: package-lock.json  package.json
bruno/local poly-comp/: bruno.json  delete game.bru  (+17 more)
docs/: README.md  api_cheatsheet.md  arca comunal tarjetas.txt  backend_architecture.md  bonificaciones tarjeta.txt  boveda de tarjetas.txt  fortuna tarjetas.txt  project_walkthrough.md
shared/: titulos de propiedad.txt
(+70 files in other folders)
