[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "parsing"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.89"
rand = "0.9.2"
serde_json = "1.0.148"

[dev-dependencies]
mockall = "0.14.0"
